<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/places_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurants_id"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_map_id"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/map" />
    </group>

    <group
        android:id="@+id/account_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites_id"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_reviews_id"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/my_reviews" />
        <item
            android:id="@+id/nav_profile_id"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/my_profile" />
    </group>

    <group>
        <item
            android:id="@+id/nav_logout_id"
            android:title="@string/logout"
            />
    </group>


</menu>