<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:layout_marginStart="36.7dp"
            android:orientation="horizontal">

            <com.example.user.restaurantreviewapp.customfonts.MyTextView_Roboto_Black
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="31sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="1dp"
                android:layout_marginTop="5dp"
                android:layout_height="34dp"
                android:layout_marginStart="9.2dp"
                android:background="#ffffff"/>

        </LinearLayout>


        <com.example.user.restaurantreviewapp.customfonts.EditText_Roboto_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/email"
            android:layout_marginTop="54.7dp"
            android:layout_marginStart="34.6dp"
            android:layout_marginEnd="33.6dp"
            android:textColorHint="#ffffff"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:id="@+id/email"
            android:textColor="#ffffff"
            android:textSize="14.4sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33ffffff"
            android:layout_marginStart="34.6dp"
            android:layout_marginEnd="33.6dp"
            android:layout_marginTop="6.5dp"/>


        <com.example.user.restaurantreviewapp.customfonts.EditText_Roboto_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33.6dp"
            android:background="#00000000"
            android:hint="@string/password"
            android:id="@+id/pass"
            android:layout_marginStart="34.6dp"
            android:layout_marginEnd="33.6dp"
            android:textAlignment="viewStart"
            android:textColorHint="#ffffff"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textSize="14.4sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33ffffff"
            android:layout_marginStart="34.6dp"
            android:layout_marginEnd="33.6dp"
            android:layout_marginTop="6.5dp"/>

        <com.example.user.restaurantreviewapp.customfonts.MyTextView_Roboto_Regular
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34.6dp"
            android:layout_marginTop="33.6dp"
            android:layout_marginEnd="33.6dp"
            android:background="#00000000"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#FF0808"
            android:textColorHint="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.example.user.restaurantreviewapp.customfonts.MyTextView_Roboto_Regular
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34.6dp"
            android:layout_marginTop="53.8dp"
            android:layout_marginEnd="33.6dp"
            android:background="@drawable/round_corner"
            android:gravity="center_horizontal"
            android:padding="16.4dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="13.3sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28.1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.example.user.restaurantreviewapp.customfonts.MyTextView_Roboto_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="#ffffff"
            android:textSize="14.4sp" />

        <com.example.user.restaurantreviewapp.customfonts.MyTextView_Roboto_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textColor="#d22532"
            android:textSize="14.4sp" />
    </LinearLayout>
</RelativeLayout>
